chore(package): update react

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,6 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-<!--    <meta-->
-<!--      name="description"-->
-<!--      content="Scouts BSA Troop 446 in Indianapolis: camping, service, leadership and fun"-->
-<!--    />-->
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -25,6 +21,14 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Troop 446 Indianapolis, Indiana</title>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q30KRQYSJ4"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-Q30KRQYSJ4');
+    </script>    
   </head>
   <body style="background-color: #333;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
